--- a/chess.html
+++ b/chess.html
@@ -192,7 +192,9 @@
 <script type="text/javascript" src="pieces/Bishop.js"></script>
 <script type="text/javascript" src="pieces/Knight.js"></script>
 <script type="text/javascript" src="pieces/Pawn.js"></script>
+<script type="text/javascript" src="ai.js"></script>
 <script type="text/javascript" src="Game.js"></script>
+<script type="text/javascript" src="Board.js"></script>
 
 <script type="text/javascript">
 	function boardAnimate(){
