adding pieces to the ui in runtime using js instead of fixed html so the game can be restarted easily from javascript with any possible pieces & positions

--- a/chess.html
+++ b/chess.html
@@ -17,56 +17,24 @@
 
 	<div id="board">
 		<div id="final" class="odd">
-			<div id="81" class="square" data-square="8-a">
-				<img class="piece rook" id="blackRook1" src="img/blackRook.png">
-			</div>
-			<div id="82" class="square" data-square="8-b">
-				<img class="piece knight" id="blackKnight1" src="img/blackKnight.png">
-			</div>
-			<div id="83" class="square" data-square="8-c">
-				<img class="piece bishop" id="blackBishop1" data-color="black" src="img/blackBishop.png">
-			</div>
-			<div id="84" class="square" data-square="8-d">
-				<img class="piece bking" id="blackQueen" data-color="black" src="img/blackQueen.png">
-			</div>
-			<div id="85" class="square" data-square="8-e">
-				<img class="piece bking" id="blackKing" data-color="black" src="img/blackKing.png">
-			</div>
-			<div id="86" class="square" data-square="8-f">
-				<img class="piece bishop" id="blackBishop2" data-color="black" src="img/blackBishop.png">
-			</div>
-			<div id="87" class="square" data-square="8-g">
-				<img class="piece bking" id="blackKnight2" data-color="black" src="img/blackKnight.png">
-			</div>
-			<div id="88" class="square" data-square="8-h">
-				<img class="piece rook" id="blackRook2" src="img/blackRook.png">
-			</div>
+			<div id="81" class="square" data-square="8-a"></div>
+			<div id="82" class="square" data-square="8-b"></div>
+			<div id="83" class="square" data-square="8-c"></div>
+			<div id="84" class="square" data-square="8-d"></div>
+			<div id="85" class="square" data-square="8-e"></div>
+			<div id="86" class="square" data-square="8-f"></div>
+			<div id="87" class="square" data-square="8-g"></div>
+			<div id="88" class="square" data-square="8-h"></div>
 		</div>
 		<div class="even">
-			<div id="71" class="square" data-square="7-a">
-				<img class="piece pawn" id="blackPawn1" src="img/blackPawn.png">
-			</div>
-			<div id="72" class="square" data-square="7-b">
-				<img class="piece pawn" id="blackPawn2" src="img/blackPawn.png">
-			</div>
-			<div id="73" class="square" data-square="7-c">
-				<img class="piece pawn" id="blackPawn3" src="img/blackPawn.png">
-			</div>
-			<div id="74" class="square" data-square="7-d">
-				<img class="piece pawn" id="blackPawn4" src="img/blackPawn.png">
-			</div>
-			<div id="75" class="square" data-square="7-e">
-				<img class="piece pawn" id="blackPawn5" src="img/blackPawn.png">
-			</div>
-			<div id="76" class="square" data-square="7-f">
-				<img class="piece pawn" id="blackPawn6" src="img/blackPawn.png">
-			</div>
-			<div id="77" class="square" data-square="7-g">
-				<img class="piece pawn" id="blackPawn7" src="img/blackPawn.png">
-			</div>
-			<div id="78" class="square" data-square="7-h">
-				<img class="piece pawn" id="blackPawn8" src="img/blackPawn.png">
-			</div>
+			<div id="71" class="square" data-square="7-a"></div>
+			<div id="72" class="square" data-square="7-b"></div>
+			<div id="73" class="square" data-square="7-c"></div>
+			<div id="74" class="square" data-square="7-d"></div>
+			<div id="75" class="square" data-square="7-e"></div>
+			<div id="76" class="square" data-square="7-f"></div>
+			<div id="77" class="square" data-square="7-g"></div>
+			<div id="78" class="square" data-square="7-h"></div>
 		</div>
 		<div class="odd">
 			<div id="61" class="square" data-square="6-a"></div>
@@ -109,56 +77,24 @@
 			<div id="38" class="square" data-square="3-h"></div>
 		</div>
 		<div class="odd">
-			<div class="square white" id="21" data-square="2-a">
-				<img class="piece pawn" id="whitePawn1" src="img/whitePawn.png">
-			</div>
-			<div class="square white" id="22" data-square="2-b">
-				<img class="piece pawn" id="whitePawn2" src="img/whitePawn.png">
-			</div>
-			<div class="square white" id="23" data-square="2-c">
-				<img class="piece pawn" id="whitePawn3" src="img/whitePawn.png">
-			</div>
-			<div class="square white" id="24" data-square="2-d">
-				<img class="piece pawn" id="whitePawn4" src="img/whitePawn.png">
-			</div>
-			<div class="square white" id="25" class="square" data-square="2-e">
-				<img class="piece pawn" id="whitePawn5" src="img/whitePawn.png">
-			</div>
-			<div class="square white" id="26" data-square="2-f">
-				<img class="piece pawn" id="whitePawn6" src="img/whitePawn.png">
-			</div>
-			<div class="square white" id="27" data-square="2-g">
-				<img class="piece pawn" id="whitePawn7" src="img/whitePawn.png">
-			</div>
-			<div class="square white" id="28" data-square="2-h">
-				<img class="piece pawn" id="whitePawn8" src="img/whitePawn.png">
-			</div>
+			<div class="square white" id="21" data-square="2-a"></div>
+			<div class="square white" id="22" data-square="2-b"></div>
+			<div class="square white" id="23" data-square="2-c"></div>
+			<div class="square white" id="24" data-square="2-d"></div>
+			<div class="square white" id="25" data-square="2-e"></div>
+			<div class="square white" id="26" data-square="2-f"></div>
+			<div class="square white" id="27" data-square="2-g"></div>
+			<div class="square white" id="28" data-square="2-h"></div>
 		</div>
 		<div class="even">
-			<div id="11" class="square white" data-square="1-a">
-				<img class="piece rook" id="whiteRook1" src="img/whiteRook.png">
-			</div>
-			<div id="12" class="square white" data-square="1-b">
-				<img class="piece knight" id="whiteKnight1" src="img/whiteKnight.png">
-			</div>
-			<div id="13" class="square white" data-square="1-c">
-				<img class="piece bishop" id="whiteBishop1" data-color="white" src="img/whiteBishop.png">
-			</div>
-			<div id="14" class="square white" data-square="1-d">
-				<img class="piece queen" id="whiteQueen" src="img/whiteQueen.png">
-			</div>
-			<div id="15" class="square white" data-square="1-e">
-				<img class="piece wking" src="img/whiteKing.png" class="white" id="whiteKing">
-			</div>
-			<div id="16" class="square white" data-square="1-f">
-				<img class="piece knight" id="whiteBishop2" src="img/whiteBishop.png">
-			</div>
-			<div id="17" class="square white" data-square="1-g">
-				<img class="piece knight" id="whiteKnight2" src="img/whiteKnight.png">
-			</div>
-			<div id="18" class="square white" data-square="1-h">
-				<img class="piece rook" id="whiteRook2" src="img/whiteRook.png">
-			</div>
+			<div id="11" class="square white" data-square="1-a"></div>
+			<div id="12" class="square white" data-square="1-b"></div>
+			<div id="13" class="square white" data-square="1-c"></div>
+			<div id="14" class="square white" data-square="1-d"></div>
+			<div id="15" class="square white" data-square="1-e"></div>
+			<div id="16" class="square white" data-square="1-f"></div>
+			<div id="17" class="square white" data-square="1-g"></div>
+			<div id="18" class="square white" data-square="1-h"></div>
 		</div>
 	</div>
 
