adding history to game with the ability to undo (but the undo is not added to the ui yet)

--- a/chess.html
+++ b/chess.html
@@ -128,7 +128,7 @@
 <script type="text/javascript" src="pieces/Bishop.js"></script>
 <script type="text/javascript" src="pieces/Knight.js"></script>
 <script type="text/javascript" src="pieces/Pawn.js"></script>
-<script type="text/javascript" src="ai.js"></script>
+<script type="text/javascript" src="History.js"></script>
 <script type="text/javascript" src="Game.js"></script>
 <script type="text/javascript" src="Board.js"></script>
 
