adding a very slow ai (not used in ui yet

--- a/chess.html
+++ b/chess.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Chess</title>
 	<link rel="stylesheet" type="text/css" href="chess.css">
 </head>
 <body>
 
 <div id="endscene">
-	<p class="winning-sign">white wins</p>
+	<p class="winning-sign"></p>
 	<div class="overlay">
 	</div>
 </div>
@@ -130,6 +130,8 @@
 <script type="text/javascript" src="pieces/Pawn.js"></script>
 <script type="text/javascript" src="History.js"></script>
 <script type="text/javascript" src="Game.js"></script>
+<script type="text/javascript" src="SimulationGame.js"></script>
+<script type="text/javascript" src="ai.js"></script>
 <script type="text/javascript" src="Board.js"></script>
 
 <script type="text/javascript">
