making human color option 'white' by default in start scene

--- a/chess.html
+++ b/chess.html
@@ -19,7 +19,7 @@
 		
 		<div class="select-color-container" style="margin-bottom: 50px;display: none;">
 			<h2>Select Your Color</h2>
-			<input type="radio" name="human_color" id="humanColorWhite" value="white">
+			<input type="radio" name="human_color" id="humanColorWhite" value="white" checked>
 			<label for="humanColorWhite">White</label>
 			&ensp;
 			<input type="radio" name="human_color" id="humanColorBlack" value="black">
