using functions to get piece moves instead of classes and changing piece objects that are not instances of classs (because they are faster to copy)

--- a/chess.html
+++ b/chess.html
@@ -147,13 +147,7 @@
 	<button class="flip-board" onclick="boardAnimate()">Flip Board</button>
 </div>
 
-<script type="text/javascript" src="pieces/Piece.js"></script>
-<script type="text/javascript" src="pieces/King.js"></script>
-<script type="text/javascript" src="pieces/Queen.js"></script>
-<script type="text/javascript" src="pieces/Rook.js"></script>
-<script type="text/javascript" src="pieces/Bishop.js"></script>
-<script type="text/javascript" src="pieces/Knight.js"></script>
-<script type="text/javascript" src="pieces/Pawn.js"></script>
+<script type="text/javascript" src="piece.js"></script>
 <script type="text/javascript" src="History.js"></script>
 <script type="text/javascript" src="Game.js"></script>
 <script type="text/javascript" src="SimulationGame.js"></script>
