--- a/chess.html
+++ b/chess.html
@@ -4,7 +4,7 @@
 	<title>Chess</title>
 	<link rel="stylesheet" type="text/css" href="chess.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light only" />
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
