adding og:image & og:description tags

--- a/chess.html
+++ b/chess.html
@@ -4,6 +4,8 @@
 	<title>Chess</title>
 	<link rel="stylesheet" type="text/css" href="chess.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta property="og:image" content="img/share.jpeg" />
+	<meta property="og:description" content="A complete well automated chess game made by JavaScript that contains AI. Check it out. I hope you like it." />
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
