changing main html title

--- a/chess.html
+++ b/chess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Chess</title>
+	<title>Chess Game</title>
 	<link rel="stylesheet" type="text/css" href="chess.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta property="og:image" content="img/share.jpeg" />
