--- a/chess.html
+++ b/chess.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta property="og:image" content="img/share.jpeg" />
 	<meta property="og:description" content="A complete well automated chess game made by JavaScript that contains AI. Check it out. I hope you like it." />
+	<meta name="author" content="Ahmed Alkholy">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
